--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -7,75 +7,205 @@
     <title>{{ title }}</title>
   </head>
   <body>
-    <ul>
+    <!-- <header>
+      <nav class="navbar navbar-expand-lg navbar-white bg-dark">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link linkki" (click)="avaa(UusiKurssi)"
+              >Lisää uusi kurssi</a
+            >
+            <a
+              class="nav-item nav-link linkki"
+              data-toggle="modal"
+              data-target="#myModal"
+              >Lisää muistiinpano</a
+            >
+            <a
+              class="nav-item nav-link linkki"
+              data-toggle="modal"
+              data-target="#tehtavanLisaysModal"
+              >Lisää tehtävä</a
+            >
+          </div>
+        </div>
+      </nav>
+    </header> -->
+    <div class="button-container">
+      <button class="btn btn-success lisays-nappi" (click)="avaa(UusiKurssi)">
+        Lisää uusi kurssi
+      </button>
+      <button
+        class="btn btn-success lisays-nappi"
+        data-toggle="modal"
+        data-target="#myModal"
+      >
+        Lisää uusi muistiinpano
+      </button>
+      <button
+        class="btn btn-success lisays-nappi"
+        data-toggle="modal"
+        data-target="#tehtavanLisaysModal"
+      >
+        Lisää uusi tehtävä
+      </button>
+    </div>
+
+    <ul class="kurssi-listaus">
       <li *ngFor="let kurssi of kurssit2[0]" id="kurssilista">
         <div class="kurssi-kortti">
           <img src="{{ kurssi.kuva }}" id="pollo" />
           <h5>{{ kurssi.nimi }}</h5>
-          <button
-            name="kurssikoodi"
-            type="button"
-            class="btn btn-primary"
-            data-toggle="modal"
-            data-target="#myModal"
-            value="{{ kurssi.kurssikoodi }}"
-          >
-            Lisää muistiinpano
-          </button>
+          <div id="muistiinpanolista">
+            <h6>Muistiinpanot</h6>
+            <div *ngFor="let muistio of kurssi.muistiinpanot">
+              <a
+                (click)="open(content, muistio.otsikko)"
+                id="muistiinpano-linkki"
+              >
+                {{ muistio.otsikko }}
+              </a>
 
-          <div *ngFor="let muistio of kurssi.muistiinpanot">
+              <app-modal [kurssit2]="kurssit2"></app-modal>
+              <ng-template #content let-modal>
+                <div class="modal-header" id="myModal2">
+                  <!-- Modal Header -->
+                  <h4 class="modal-title">{{ muistio.otsikko }}</h4>
+                  <button
+                    type="button"
+                    class="close"
+                    (click)="modal.dismiss('Cross click')"
+                  >
+                    &times;
+                  </button>
+                </div>
+                <!-- Modal 2 body -->
+                <div class="modal-body">
+                  <p ngbAutofocus>{{ muistio.muistiinpano }}</p>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    (click)="modal.dismiss('Cross click')"
+                  >
+                    Sulje
+                  </button>
+
+                  <!-- this button is hidden, used to close from typescript -->
+                  <button
+                    type="button"
+                    id="close-modal2"
+                    data-dismiss="modal"
+                    style="display: none"
+                  >
+                    Close
+                  </button>
+                </div>
+              </ng-template>
+            </div>
+          </div>
+          <div class="teht-done">
+            <h6>Tehdyt tehtävät</h6>
             <a
-              (click)="open(content, muistio.otsikko)"
-              id="muistiinpano-linkki"
+              *ngFor="let tehtava of kurssi.tehdytTehtavat"
+              (click)="open(content, tehtava.tehtava)"
+              class="tehtava-linkki"
             >
-              {{ muistio.otsikko }}
+              {{ tehtava.tehtava }}
             </a>
-
-            <app-modal [kurssit2]="kurssit2"></app-modal>
-            <ng-template #content let-modal>
-              <div class="modal-header" id="myModal2">
-                <!-- Modal Header -->
-                <h4 class="modal-title">{{ muistio.otsikko }}</h4>
-                <button
-                  type="button"
-                  class="close"
-                  (click)="modal.dismiss('Cross click')"
-                >
-                  &times;
-                </button>
-              </div>
-              <!-- Modal 2 body -->
-              <div class="modal-body">
-                <p ngbAutofocus>{{ muistio.muistiinpano }}</p>
-              </div>
-
-              <!-- Modal footer -->
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-danger"
-                  (click)="modal.dismiss('Cross click')"
-                >
-                  Sulje
-                </button>
-
-                <!-- this button is hidden, used to close from typescript -->
-                <button
-                  type="button"
-                  id="close-modal2"
-                  data-dismiss="modal"
-                  style="display: none"
-                >
-                  Close
-                </button>
-              </div>
-            </ng-template>
+          </div>
+          <div class="teht-undone">
+            <h6>Tekemättömät tehtävät</h6>
+            <a
+              *ngFor="let tehtava of kurssi.uudetTehtavat"
+              (click)="open(content, tehtava.tehtava)"
+              class="tehtava-linkki"
+            >
+              {{ tehtava.tehtava }}
+            </a>
           </div>
         </div>
       </li>
     </ul>
-    <button id="uusi-kurssi" class=" btn btn-secondary" (click)="lisaaKurssi()">
-      Lisää uusi kurssi
-    </button>
+    <ng-template #UusiKurssi let-modal>
+      <div class="modal-header" id="UusiKurssiModal">
+        <!-- Uusi kurssi Modal Header -->
+        <h4 class="modal-title">Lisää uusi kurssi</h4>
+        <button
+          type="button"
+          class="close"
+          (click)="modal.dismiss('Cross click')"
+        >
+          &times;
+        </button>
+      </div>
+      <!-- Uusi kurssi modal body -->
+      <div class="modal-body">
+        <form action="http://localhost:3000/kurssit" method="POST">
+          <div class="form-group">
+            <label for="kurssinValinta">Uusi kurssi</label>
+            <select
+              class="form-control"
+              id="kurssinValinta"
+              ngbAutofocus
+              name="nimi"
+            >
+              <option>-- Valitse kurssi --</option>
+              <option *ngFor="let kurssi of kurssit3[0]">
+                {{ kurssi.nimi }}
+              </option>
+              <input
+                type="text"
+                value="../../assets/images/orsipollo4.png"
+                hidden
+                name="kuva"
+              />
+            </select>
+          </div>
+          <hr />
+          <div class="button-container">
+            <button
+              class="btn btn-primary modal-nappi"
+              type="submit"
+              method="POST"
+            >
+              Lisää
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger modal-nappi"
+              (click)="modal.dismiss('Cross click')"
+            >
+              Sulje
+            </button>
+          </div>
+        </form>
+
+        <!-- this button is hidden, used to close from typescript -->
+        <button
+          type="button"
+          id="close-modal2"
+          data-dismiss="modal"
+          style="display: none"
+        >
+          Close
+        </button>
+      </div>
+    </ng-template>
   </body>
 </html>
