--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
@@ -1,26 +1,32 @@
-h1 {
-  margin: 50px;
-}
-
 /* tekstikentän muotoilut*/
-div {
-  width: 500px;
+.info {
+  position: static;
+  max-width: 500px;
   margin: 10px;
-  float: left;
-  padding: 1em;
 }
 /* sisäänkirjautumislomakkeen muotoilut*/
 .login {
-  max-width: 100%;
-  height: auto;
-  float: right;
-  padding: 1em;
-  margin-right: 20%;
+  position: absolute;
+  right: 10%;
+  top: 10%;
+}
+
+.otsikko {
+  position: relative;
+  top: 0px;
+  margin: 10px;
 }
 
 /* kuvan muotoilut*/
 img {
-  width: 60%;
+  max-width: 350px;
   height: auto;
   padding: 1em;
+}
+
+@media (max-width: 730px) {
+  .login {
+    position: relative;
+    left: 40px;
+  }
 }
