--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
@@ -5,6 +5,16 @@ body {
   margin: 0;
   padding: 0;
 }
+#kurssityht {
+  position: relative;
+}
+#teksti {
+  position: fixed;
+  right: 10px;
+}
+.muistiinpanotnappi {
+  text-align: center;
+}
 .swiper-container {
   width: 100%;
   padding-top: 50px;
@@ -13,7 +23,7 @@ body {
 .swiper-slide {
   background-position: center;
   max-width: 300px;
-  max-height: 300px;
+  max-height: auto;
 }
 .swiper-slide .imgBox {
   max-width: 300px;
@@ -27,6 +37,7 @@ body {
   box-sizing: border-box;
   font-size: 20px;
   padding: 20px;
+  position: center;
 }
 .swiper-slide .details h3 {
   margin: 0;
