--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -7,13 +7,13 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, minimum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{{ title }}</title>
   </head>
   <body>
-    <div id="kurssityht">
-      <div id="teksti">
-        <h5>Opintopisteet yhteensä: {{ kurssityht }}</h5>
-      </div>
+    <div class="otsikko">
+      <h3>Suoritetut Kurssit</h3>
+    </div>
+    <div class="kurssityht">
+      <h5>Opintopisteet yhteensä: {{ kurssityht }}</h5>
     </div>
     <div class="swiper-container">
       <div class="swiper-wrapper">
