--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -1,5 +1,5 @@
 <div class="otsikko"><h1>Lintukoto</h1></div>
-<div class="info">
+<div class="otsikko">
   <p>
     Lintukoto on opiskelijoiden ajanhallintaa helpottava sovellus.<br />
     Pääset sovellukseen kirjautumalla henkilökohtaisella käyttäjätunnuksella ja
@@ -20,6 +20,6 @@
     <input type="text" name="username" formControlName="username" /><br />
     <label>Salasana</label><br />
     <input type="password" name="password" formControlName="password" /><br />
-    <button type="submit">Kirjaudu</button>
+    <button type="submit" class="kirjautumisnappi">Kirjaudu</button>
   </form>
 </div>
