--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
@@ -1,5 +1,6 @@
 body {
-  background: #fff;
+  background-image: url("../../assets/images/Puu_rasmukselle.png");
+  background-color: #fff;
   font-size: 14px;
   color: #000;
   margin: 0;
