--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <div class="otsikko">
-      <h3>Suoritetut Kurssit</h3>
+      <h3 class="otsikkotext">Suoritetut Kurssit</h3>
     </div>
     <div class="kurssityht">
-      <h5>Opintopisteet yhteensä: {{ kurssityht }}</h5>
+      <h5 class="otsikkotext">Opintopisteet yhteensä: {{ kurssityht }}</h5>
     </div>
     <div class="swiper-container">
       <div class="swiper-wrapper">
