--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -28,7 +28,7 @@
           <div class="details">
             <h3>{{ kurssi.nimi }} ({{ kurssi.pisteet }}p)</h3>
             <div class="muistiinpanotnappi">
-              <button>Muistiinpanot</button>
+              <button class="btn btn-light">Muistiinpanot</button>
             </div>
           </div>
         </div>
