--- a/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.css
+++ b/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.css
@@ -1,6 +1,7 @@
 .polloicon {
-  width: 150px;
-  height: 150px;
+  width: 80px;
+  height: 80px;
+  margin: 20px;
 }
 
 footer {
@@ -10,4 +11,16 @@ footer {
   width: 100%;
   color: white;
   text-align: right;
+}
+h4 {
+  display: block;
+}
+.modal-dialog {
+  position: absolute;
+  bottom: 10px;
+  right: 220px;
+  margin: 10px;
+}
+.nappula {
+  margin: 10px;
 }
