--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
@@ -29,7 +29,20 @@ body {
   text-align: center;
   margin-top: 10px;
 }
-.details {
+#taulu {
+  background-image: url("../../assets/images/taulu2.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 330px;
+  height: 330px;
+}
+
+img {
+  margin-top: 50px;
+  margin-left: 23px;
+  width: 280px;
+  height: 280px;
 }
 
 .swiper-container {
@@ -45,10 +58,13 @@ body {
 .swiper-slide .imgBox {
   max-width: 300px;
   max-height: 300px;
+  align-content: center;
 }
+
 .swiper-slide .imgBox img {
-  max-width: 300px;
-  max-height: 300px;
+  margin-top: 50px;
+  width: 300px;
+  height: 300px;
 }
 .swiper-slide .details {
   box-sizing: border-box;
