--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -22,8 +22,8 @@
           id="kurssilista"
           class="swiper-slide"
         >
-          <div class="imgBx">
-            <img src="{{ kurssi.kuva }}" width="300" height="300" />
+          <div class="imgBx" id="taulu">
+            <img src="{{ kurssi.kuva }}" />
           </div>
           <div class="details">
             <h3>{{ kurssi.nimi }} ({{ kurssi.pisteet }}p)</h3>
