henkipöllö toimii ja värit muutettu kalenterisivulle

--- a/Lintukoto-sovellus/src/app/error/error.component.css
+++ b/Lintukoto-sovellus/src/app/error/error.component.css
@@ -4,6 +4,7 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  text-align: center;
 }
 body {
   background-color: black;
