--- a/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.html
+++ b/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.html
@@ -4,7 +4,7 @@
     [showTimeIndicator]="showTimeIndicator"
     width="100%"
     locale="fi"
-    height="450px"
+    height="100%"
     [views]="views"
     [eventSettings]="eventObject"
     [showHeaderBar]="showHeaderBar"
