--- a/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.html
+++ b/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.html
@@ -1,3 +1,4 @@
+<!--Henkipöllön modal joka aukee kun henkipöllön kuvaketta painaa-->
 <div class="modal fade" id="henkipollomodal">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -26,7 +27,7 @@
         Mitä tällä sivulla tehdään?
       </button>
       <button class="btn btn-success nappula">
-        Henkipöllö näkymä
+        Henkipöllön pesä
       </button>
 
       <button
@@ -60,7 +61,7 @@
         </button>
       </div>
 
-      <p class="qotd">{{ lause }}</p>
+      <p class="margin">{{ lause }}</p>
 
       <button (click)="randomLause()" class="btn btn-primary nappula">
         Seuraava
@@ -91,14 +92,15 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- Modal Header -->
-      <div class="modal-header">
-        <h4 class="modal-title">Mikä sivu?</h4>
-        <button type="button" class="close" (click)="hideModalsivu()">
-          &times;
-        </button>
-      </div>
-      <div *ngIf="router.url === '/suoritetut'" class="qotd">
-        <p>
+
+      <div *ngIf="router.url === '/suoritetut'">
+        <div class="modal-header">
+          <h4 class="modal-title">Suoritetut kurssit</h4>
+          <button type="button" class="close" (click)="hideModalsivu()">
+            &times;
+          </button>
+        </div>
+        <p class="margin">
           “Suoritetut kurssit sivulta näet kaikki tähän asti suorittamasi
           kurssit. Näet kurssin ja sen oman räätälöidyn kurssipöllön, paljonko
           pisteitä kurssi sinulle toi ja lisäksi löydät kurssin aikanasi
@@ -106,17 +108,29 @@
           opintopisteitä sinulle on kaiken kaikkiaan kertynyt.”
         </p>
       </div>
-      <div *ngIf="router.url === '/aktiiviset'" class="qotd">
-        <p>
-          “Täältä löydät kaikki tällä hetkellä käynnissä olevat kurssisi.
-          Jokaista kurssia kuvataan kurssipöllöllä, joita voit muokata. Tältä
-          sivulta löytyy myös kurssitehtäväsi ja sinulla on mahdollisuus
-          kirjoittaa muistiinpanoja jokaiselle kurssille.”
+      <div *ngIf="router.url === '/aktiiviset'">
+        <div class="modal-header">
+          <h4 class="modal-title">Aktiiviset kurssit</h4>
+          <button type="button" class="close" (click)="hideModalsivu()">
+            &times;
+          </button>
+        </div>
+        <p class="margin">
+          “Aktiiviset kurssit sivulta löydät kaikki tällä hetkellä käynnissä
+          olevat kurssisi. Jokaista kurssia kuvataan kurssipöllöllä, joita voit
+          muokata. Tältä sivulta löytyy myös kurssitehtäväsi ja sinulla on
+          mahdollisuus kirjoittaa muistiinpanoja jokaiselle kurssille.”
         </p>
       </div>
-      <div *ngIf="router.url === '/kalenteri'" class="qotd">
+      <div *ngIf="router.url === '/kalenteri'">
+        <div class="modal-header">
+          <h4 class="modal-title">Kalenteri</h4>
+          <button type="button" class="close" (click)="hideModalsivu()">
+            &times;
+          </button>
+        </div>
         <div *ngIf="sivu === 1">
-          <p>
+          <p class="margin">
             “Tässä näet kalenterisi, johon voit lisätä kaikki tuntisi, tehtäväsi
             ja vapaa-ajan menosi. Kalenteri-sivun tarkoituksena on auttaa sinua
             hallitsemaan aikatauluasi ja parantamaan oloasi, kun tiedät mitä
@@ -131,7 +145,7 @@
           </button>
         </div>
         <div *ngIf="sivu === 2">
-          <p>
+          <p class="margin">
             “Kalenterin Tehtävät-kohtaan voit lisätä kaikki koulusta saamasi
             tehtävät ja vetää ne kalenteriin. Voit valita itsellesi sopivan
             ajankohdan ja tarvittaessa minä voin auttaa sinua ja ehdottaa
@@ -146,16 +160,31 @@
           </button>
         </div>
       </div>
-      <div *ngIf="router.url === '/asetukset'" class="qotd">
-        <p>
+      <div *ngIf="router.url === '/asetukset'">
+        <div class="modal-header">
+          <h4 class="modal-title">Asetukset</h4>
+          <button type="button" class="close" (click)="hideModalsivu()">
+            &times;
+          </button>
+        </div>
+        <p class="margin">
           “Asetukset sivulla pystyt lisäämään tietoja itsestäsi ja
           koulutuksestasi. Lisäksi voit vaikuttaa sovelluksen toimintaan,
           esimerkiksi kertomalla työskenteletkö mieluummin aamulla vai illalla.
           Jos pöllöt eivät ole tyyliäsi, pystyt poistamaan ne käytöstä täältä.”
         </p>
       </div>
-      <div *ngIf="router.url === '/kirjautuminen'" class="qotd">
-        <p>Tämä on kirjautumis sivu</p>
+      <div *ngIf="router.url === '/kirjautuminen'">
+        <div class="modal-header">
+          <h4 class="modal-title">Kirjautuminen</h4>
+          <button type="button" class="close" (click)="hideModalsivu()">
+            &times;
+          </button>
+        </div>
+        <p class="margin">
+          “Tämä on sovelluksemme etusivu. Tästä voit luoda käyttäjän tai
+          kirjautua sisään.”
+        </p>
       </div>
 
       <button
