--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
@@ -1,6 +1,6 @@
 body {
-  background-image: url("../../assets/images/galleria2.png");
-  background-color: skyblue;
+  background-image: url("../../assets/images/galleria2.sininen.png");
+  background-size: cover;
   font-size: 14px;
   color: #000;
   height: 100vh;
@@ -9,17 +9,15 @@ body {
 .kurssityht {
   background-color: rgba(31, 24, 24, 0.5);
   backdrop-filter: blur(12px);
-  position: absolute;
-  right: 10px;
-  top: 60px;
+  position: relative;
+  float: right;
   padding: 5px;
 }
 .otsikko {
   background-color: rgba(31, 24, 24, 0.5);
   backdrop-filter: blur(12px);
-  position: absolute;
-  top: 60px;
-  left: 10px;
+  position: relative;
+  float: left;
   padding: 5px;
 }
 .otsikkotext {
@@ -37,7 +35,11 @@ body {
   width: 330px;
   height: 330px;
 }
-
+.btn-custom {
+  background-color: transparent;
+  border-color: #ffffff;
+  color: #ffffff;
+}
 img {
   margin-top: 40px;
   margin-left: 25px;
@@ -78,21 +80,35 @@ img {
   padding: 0;
   font-size: 20px;
   text-align: center;
-  color: #413F3C;
+  color: #fefefd;
 }
 
 @media (max-width: 991px) {
   .otsikko {
     text-align: left;
-    position: static;
+    position: relative;
   }
   .kurssityht {
     text-align: left;
-    position: static;
+    position: relative;
   }
   .swiper-container {
     width: 100%;
     padding-top: 35px;
     padding-bottom: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .kurssityht {
+    display: block;
+    width: 100%;
+    position: relative;
+    text-align: center;
+  }
+  .otsikko {
+    display: block;
+    width: 100%;
+    position: relative;
+    text-align: center;
   }
 }
