--- a/Lintukoto-sovellus/src/styles.css
+++ b/Lintukoto-sovellus/src/styles.css
@@ -12,9 +12,8 @@
 @import "../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css";
 @import "../node_modules/@syncfusion/ej2-angular-grids/styles/material.css";
 
-.body {
-  height: 100vh;
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  max-height: 93.8vh;
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
