--- a/materiaalit/styles/grid/material.css
+++ b/materiaalit/styles/grid/material.css
@@ -2129,11 +2129,11 @@
 .e-grid .e-headercelldiv {
   border: 0 none;
   display: block;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 500;
   height: 29px;
   line-height: 30px;
-  margin: -7px;
+  margin: -11px;
   overflow: hidden;
   padding: 0 0.6em;
   text-align: left;
@@ -4098,7 +4098,7 @@
 }
 
 .e-grid .e-table {
-  background-color: #fff;
+  background-color: #676d81;
 }
 
 .e-grid .e-focused:not(.e-menu-item) {
@@ -4140,10 +4140,10 @@
 }
 
 .e-grid .e-gridheader {
-  background-color: #fff;
-  border-bottom-color: #e0e0e0;
-  border-top-color: #e0e0e0;
-  color: rgba(0, 0, 0, 0.54);
+  background-color: #335164;
+  border-bottom-color: #ffffff;
+  border-top-color: #ffffff;
+  color: #ffffff;
 }
 
 .e-grid .e-gridcontent tr:first-child td {
@@ -4191,13 +4191,13 @@
 }
 
 .e-grid .e-headercontent {
-  border-color: #e0e0e0;
+  border-color: #335164;
 }
 
 .e-grid .e-headercell,
 .e-grid .e-detailheadercell {
-  background-color: #fff;
-  border-color: #e0e0e0;
+  background-color: #335164;
+  border-color: #ffffff;
 }
 
 .e-grid [aria-selected] + tr .e-detailindentcell {
@@ -4214,8 +4214,7 @@
 .e-grid .e-detailrowexpand:not(.e-editedbatchcell),
 .e-grid .e-gridcontent .e-rowdragdrop:not(.e-editedbatchcell),
 .e-grid .e-emptyrow:not(.e-editedbatchcell) {
-  color: #000;
-  opacity: 0.87;
+  color: #ffffff;
 }
 
 .e-grid .e-summarycell {
@@ -4242,7 +4241,7 @@
 .e-grid .e-detailrowexpand,
 .e-grid .e-detailindentcell,
 .e-grid .e-detailcell {
-  border-color: #e0e0e0;
+  border-color: #ffffff;
 }
 
 .e-grid.e-default .e-grouptopleftcell {
@@ -4277,8 +4276,8 @@
 .e-grid.e-gridhover tr[role='row']:hover .e-rowdragdrop:not(.e-cellselectionbackground):not(.e-active):not(.e-updatedtd):not(.e-indentcell),
 .e-grid.e-rtl .e-gridhover tr[role='row']:hover .e-rowdragdrop:not(.e-cellselectionbackground):not(.e-active):not(.e-updatedtd):not(.e-indentcell),
 .e-grid.e-gridhover tr[role='row']:hover .e-detailrowexpand:not(.e-cellselectionbackground):not(.e-active):not(.e-updatedtd):not(.e-indentcell) {
-  background-color: #eee;
-  color: #000;
+  background-color:#335164;
+  color: #ffffff;
 }
 
 .e-grid tr[role='row']:hover .e-rowdragdrop {
@@ -4304,8 +4303,8 @@
 }
 
 .e-grid td.e-active {
-  background: #e0e0e0;
-  color: #000;
+  background: #335164;
+  color: #ffffff;
 }
 
 .e-grid td.e-cellselectionbackground {
