--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.html
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.html
@@ -9,22 +9,22 @@ Tutustu hänen oppeihinsa täällä ja muista, että kysyvä ei tieltä eksy. Ai
 <div class="apuaOpintoihin">
     <h2>Apua opintoihin</h2>
     <ul>
-        <li><a href="https://opinto-oppaat.jamk.fi/fi/opinto-opas-yamk/hyvinvointi-ja-opiskelijaelama">JAMKin opiskelijan tukisivut</a></li>
+        <li><a href="https://opinto-oppaat.jamk.fi/fi/opinto-opas-yamk/hyvinvointi-ja-opiskelijaelama" target="_blank">JAMKin opiskelijan tukisivut</a></li>
     </ul>
 </div>
 
 <div class="valistusnurkka">
     <h2>Valistusnurkka</h2>
     <ul>
-        <li><a href="https://www.tervekoululainen.fi/ylakoulu/lepo-ja-uni/unen-tarve/">Nukkuminen</a></li>
-        <li><a href="https://thl.fi/fi/web/alkoholi-tupakka-ja-riippuvuudet/tupakka">Tupakointi ja muut tupakkatuotteet</a></li>
+        <li><a href="https://mieli.fi/fi/mielenterveys/hyvinvointi/unen-merkitys" target="_blank">Nukkuminen</a></li>
+        <li><a href="https://thl.fi/fi/web/alkoholi-tupakka-ja-riippuvuudet/tupakka" target="_blank">Tupakointi ja muut tupakkatuotteet</a></li>
     </ul>
 </div>
 
 <div class="muutaMielenkiintoista">
     <h2>Muuta mielenkiintoista</h2>
     <ul>
-        <li><a href="https://www.nyyti.fi/opiskelijoille/opi-elamantaitoa/hallittua-ajankayttoa/">Ajanhallinta on taito</a></li>
+        <li><a href="https://www.nyyti.fi/opiskelijoille/opi-elamantaitoa/hallittua-ajankayttoa/" target="_blank">Ajanhallinta on taito</a></li>
     </ul>
 </div>
 </div>
